acm/namespaces/istio-system/virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-ingress
  namespace: istio-system
spec:
  hosts:
  - "kiali.arctiqtim-istio.anthos.labs.arctiq.ca"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali-gateway-service-disable-mtls
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ingress
  namespace: istio-system
spec:
  hosts:
  - "grafana.arctiqtim-istio.anthos.labs.arctiq.ca"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana-gateway-service-disable-mtls
  namespace: istio-system
spec:
  host: grafana.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-ingress
  namespace: istio-system
spec:
  hosts:
  - "tracing.arctiqtim-istio.anthos.labs.arctiq.ca"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing-gateway-service-disable-mtls
  namespace: istio-system
spec:
  host: tracing.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE


---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-aware-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
    hosts:
    - "*.local"
